Event/popGuilds/popLB.css
/*Navagation Bar*/
#navBar {
  margin-top: -2px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
  background-color: transparent;
  position: fixed;
  z-index: 2;
  top: 0;
}

.navLink {
  /*Position*/
  margin-right: 12px;
  padding-top: 8px;
  padding-bottom: 5px;
  /*Looks*/
  background-color: #4a363a;
  font-size: 30px;
  color: #f8d474;
  border: 3px solid #988672;
  text-align: center;
  /*Transition*/
  transition-duration: 0.2s;
  cursor: pointer;
  width: 40px;
}
.navLink:hover {
  margin-bottom: -17px;
  padding-top: 14px;
  padding-bottom: 16px;
}

/*Main Section*/

body {
  overflow-x: hidden;
  background: url("https://gooseterv.github.io/pop/images/background-left.png")
      left repeat-y,
    url("https://gooseterv.github.io/pop/images/background-right.png") right
      repeat-y,
    #523b40;
  font-family: Pixellari;
}
#main {
  overflow-y: scroll;
  overflow-x: hidden;
}

.box {
  display: flex;
  justify-content: space-between;
  background-color: #4a363a;
  border: 3.5px solid #988672;
  margin-left: auto;
  width: 70%;
  margin-right: auto;
  cursor: pointer;
  height: initial;
  align-items: center;
}
.boxImg {
  width: 50px;
  height: 50px;
  border: 3.5px solid #988672;
  margin: 10px;
}

.spacingBoxLeft {
  display: inline-flex;
  justify-content: flex-start;
  align-items: center;
}
.spacingBoxRight {
  display: inline-flex;
  justify-content: flex-end;
  align-items: center;
  height: inherit;
}

/**/

.boxSec {
  width: 200px;
  display: flex;
  align-items: center;
}
.boxSec.user {
  justify-content: center;
}
.boxSec.gold {
  justify-content: flex-end;
  margin-right: 10px;
}
.boxSec > img {
  width: 25px;
  height: 25px;
}

.boxTxt {
  color: #f8d474;
  font-size: 23px;
  font-weight: bold;
  margin: 10px;
}
.boxTxt.user {
  margin: 0px;
  font-size: 16px;
}
.boxTxt.desc {
  font-size: 17px;
}

@media only screen and (max-width: 877px) {
  #navBar {
    justify-content: center;
  }
}
@media only screen and (max-width: 700px) {
  .box {
    justify-content: center;
    flex-direction: column;
  }
  .boxSec.gold {
    justify-content: center;
    margin-right: 0px;
  }
}

